[tool.poetry]
name = "pptx_to_md"
version = "0.1.0"
description = "Simple script to convert a Powerpoint presentation to markdown, with the slides as images. The user needs to export the powerpoint as PNG images first."
authors = ["Peter Sefton <peter.sefton@uts.edu.au>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
python-pptx = "^0.6.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
